--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -7,12 +7,16 @@
     >
       Diu
     </a>
-    <span px-1>|</span>
+    <span px-1>|Fork</span>
     <a
       b-slate-link
-      href="https://github.com/ddiu8081/chatgpt-demo" target="_blank"
+href="https://github.com/ddiu8081/chatgpt-demo" target="_blank"
     >
-      Source Code
+     address
     </a>
+    |<a href= "mailto:ziyiwxyz@gmail.com"
+    >
+     Contact me
+     </a>
   </p>
 </footer>
