--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,29 +10,34 @@ const { title } = Astro.props;
 <html>
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0,viewport-fit=cover">
-    <link rel="icon" type="image/svg+xml" href="/icon.svg">
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180">
-    <link rel="mask-icon" href="/icon.svg" color="#FFFFFF">
-    <meta name="theme-color" content="#212129">
-    <meta name="generator" content={Astro.generator}>
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0,viewport-fit=cover"
+    />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
-    <meta name="description" content="A simple blog">
     {
       import.meta.env.HEAD_SCRIPTS
         ? (
-        <Fragment set:html={import.meta.env.HEAD_SCRIPTS } />
+        <Fragment set:html={import.meta.env.HEAD_SCRIPTS} />
           )
         : null
     }
-    <!-- netlify-disable-blocks -->
-    {
-      import.meta.env.PROD && (
-         <script is:inline src="/registerSW.js"></script>
-         <link rel="manifest" href="/manifest.webmanifest" />
-      )
-    }
-    <!-- netlify-disable-end -->
+
+    <script>
+    var _hmt = _hmt || [];
+    (function() {
+    var hm = document.createElement("script");
+    hm.src = "https://hm.baidu.com/hm.js?2b51db6d29045f96cf107e4bc1e5a4bc";
+    var s = document.getElementsByTagName("script")[0]; 
+    s.parentNode.insertBefore(hm, s);
+    })();
+    </script>
+  
+
+    
+    
   </head>
   <body>
     <slot />
