--- a/src/pages/password.astro
+++ b/src/pages/password.astro
@@ -4,15 +4,15 @@ import Layout from '../layouts/Layout.astro'
 
 <Layout title="Password Protection">
   <main class="h-screen col-fcc">
-    <div class="op-30">Please input password</div>
-    <div id="input_container" class="flex mt-4">
-      <input id="password_input" type="password" class="gpt-password-input" />
-      <div id="submit" class="gpt-password-submit">
-        <div class="i-carbon-arrow-right" />
-      </div>
-    </div>
+  <div class="op-30">Get password from <a href="mailto:ziyiwxyz@gmail.com">ziyiwxyz</a></div>
+  <div id="input_container" class="flex mt-4">
+  <input id="password_input" type="password" class="gpt-password-input" />
+  <div id="submit" class="gpt-password-submit">
+  <div class="i-carbon-arrow-right" />
+  </div>
+  </div>
   </main>
-</Layout>
+  </Layout>
 
 <script>
 const inputContainer = document.getElementById('input_container') as HTMLDivElement
