--- a/src/pages/password.astro
+++ b/src/pages/password.astro
@@ -5,7 +5,10 @@ import Footer from '../components/Footer.astro'
 
 <Layout title="Password Protection">
   <main class="h-screen col-fcc">
-  <div class="op-30">Get password from <a href="mailto:ziyiwxyz@gmail.com">ziyiwxyz</a></div>
+  <div class="text-center mt-8">
+  <p>请联系我获取密码：</p>
+  <p>邮箱：<a href="mailto:ziyiwxyz@gmail.com">ziyiwxyz@gmail.com</a></p>
+</div>
   <div id="input_container" class="flex mt-4">
   <input id="password_input" type="password" class="gpt-password-input" />
   <div id="submit" class="gpt-password-submit">
