--- a/src/pages/password.astro
+++ b/src/pages/password.astro
@@ -74,3 +74,14 @@ async function handleSubmit() {
   animation: shake 0.2s ease-in-out 0s 2;
 }
 </style>
+
+<style>
+  .password-info {
+    font-size: 1.2rem;
+    text-align: center;
+    margin-top: 2rem;
+  }
+  .password-info p {
+    margin: 0.5rem 0;
+  }
+</style>
