--- a/src/pages/password.astro
+++ b/src/pages/password.astro
@@ -4,7 +4,7 @@ import Footer from '../components/Footer.astro'
 ---
 
 <Layout title="Password Protection">
-  <main class="h-screen col-fcc">
+  <main class="h-screen col-fcc" style="padding-bottom: 100px;">
   <div class="text-center mt-8">
   <p>请联系我获取密码：</p>
   <p>邮箱：<a href="mailto:ziyiwxyz@gmail.com">ziyiwxyz@gmail.com</a></p>
