--- a/src/pages/password.astro
+++ b/src/pages/password.astro
@@ -4,7 +4,7 @@ import Footer from '../components/Footer.astro'
 ---
 
 <Layout title="Password Protection">
-  <main class="h-screen col-fcc" style="padding-bottom: 100px;">
+  <main class="h-screen col-fcc>
   <div class="text-center mt-8">
   <p>请联系我获取密码：</p>
   <p>邮箱：<a href="mailto:ziyiwxyz@gmail.com">ziyiwxyz@gmail.com</a></p>
@@ -16,8 +16,8 @@ import Footer from '../components/Footer.astro'
   </div>
   </div>
   </main>
-  <Footer />
   </Layout>
+  <Footer />
 
 <script>
 const inputContainer = document.getElementById('input_container') as HTMLDivElement
