--- a/src/pages/password.astro
+++ b/src/pages/password.astro
@@ -2,16 +2,6 @@
 import Layout from '../layouts/Layout.astro'
 import Footer from '../components/Footer.astro'
 ---
-<style>
-  .password-info {
-    font-size: 1.2rem;
-    text-align: center;
-    margin-top: 2rem;
-  }
-  .password-info p {
-    margin: 0.5rem 0;
-  }
-</style>
 
 <Layout title="Password Protection">
   <main class="h-screen col-fcc>
@@ -26,8 +16,9 @@ import Footer from '../components/Footer.astro'
   </div>
   </div>
   </main>
+  ＜footer/>
   </Layout>
-  <Footer />
+  
 
 <script>
 const inputContainer = document.getElementById('input_container') as HTMLDivElement
