--- a/src/pages/password.astro
+++ b/src/pages/password.astro
@@ -1,51 +1,76 @@
-import Layout from '../layouts/Layout.astro'
-import Header from '../components/Header.astro'
-import Footer from '../components/Footer.astro'
-import Generator from '../components/Generator'
-import '../message.css'
-import 'katex/dist/katex.min.css'
-import 'highlight.js/styles/atom-one-dark.css'
-
-<Layout title="ChatGPT API Demo">
-  <main>
-    <Header />
-    <Generator client:load />
-    <div class="spacer" style="height: 100px;"></div>
+--- 
+ import Layout from '../layouts/Layout.astro' 
+ import Footer from '../components/Footer.astro' 
+ --- 
+  
+ <Layout title="Password Protection">
+  <main class="h-screen col-fcc">
+  <div class="text-center mt-8">
+  <p>请联系我获取密码：</p>
+  <p>邮箱：<a href="mailto:ziyiwxyz@gmail.com">ziyiwxyz@gmail.com</a></p>
+</div>
+  <div id="input_container" class="flex mt-4">
+  <input id="password_input" type="password" class="gpt-password-input" />
+  <div id="submit" class="gpt-password-submit">
+  <div class="i-carbon-arrow-right" />
+  </div>
+  </div>
   </main>
   <Footer />
-</Layout>
-
-<Layout title="Password Protection">
-  <main class="h-screen col-fcc" style="padding-bottom: 100px;">
-    <div class="text-center mt-8">
-      <p>请联系我获取密码：</p>
-      <p>邮箱：<a href="mailto:ziyiwxyz@gmail.com">ziyiwxyz@gmail.com</a></p>
-    </div>
-    <div id="input_container" class="flex mt-4">
-      <input id="password_input" type="password" class="gpt-password-input" />
-      <div id="submit" class="gpt-password-submit">
-        <div class="i-carbon-arrow-right" />
-      </div>
-    </div>
-  </main>
-  <Footer />
-</Layout>
-
-<script>
-  async function checkCurrentAuth() {
-    const password = localStorage.getItem('pass')
-    const response = await fetch('/api/auth', {
-      method: 'POST',
-      headers: {
-        'Content-Type': 'application/json',
-      },
-      body: JSON.stringify({
-        pass: password,
-      }),
-    })
-    const responseJson = await response.json()
-    if (responseJson.code !== 0)
-      window.location.href = '/password'
-  }
-  checkCurrentAuth()
-</script>
+  </Layout> 
+  
+ <script> 
+ const inputContainer = document.getElementById('input_container') as HTMLDivElement 
+ const input = document.getElementById('password_input') as HTMLInputElement 
+ const submitButton = document.getElementById('submit') as HTMLDivElement 
+  
+ input.onkeydown = async(event) => { 
+   if (event.key === 'Enter') 
+     handleSubmit() 
+ } 
+ submitButton.onclick = handleSubmit 
+  
+ async function handleSubmit() { 
+   const password = input.value 
+   const response = await fetch('/api/auth', { 
+     method: 'POST', 
+     headers: { 
+       'Content-Type': 'application/json', 
+     }, 
+     body: JSON.stringify({ 
+       pass: password, 
+     }), 
+   }) 
+   const responseJson = await response.json() 
+   if (responseJson.code === 0) { 
+     localStorage.setItem('pass', password) 
+     window.location.href = '/' 
+   } else { 
+     inputContainer.classList.add('invalid') 
+     setTimeout(() => { 
+       inputContainer.classList.remove('invalid') 
+     }, 300) 
+   } 
+ } 
+ </script> 
+  
+ <style> 
+ @keyframes shake { 
+   0% { 
+     transform: translateX(0); 
+   } 
+   25% { 
+     transform: translateX(0.5rem); 
+   } 
+   75% { 
+     transform: translateX(-0.5rem); 
+   } 
+   100% { 
+     transform: translateX(0); 
+   } 
+ } 
+  
+ .invalid { 
+   animation: shake 0.2s ease-in-out 0s 2; 
+ } 
+ </style>
