--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,7 +17,7 @@ import 'highlight.js/styles/atom-one-dark.css'
 </Layout>
 
 <script>
-/*async function checkCurrentAuth() {
+async function checkCurrentAuth() {
   const password = localStorage.getItem('pass')
   const response = await fetch('/api/auth', {
     method: 'POST',
@@ -32,5 +32,5 @@ import 'highlight.js/styles/atom-one-dark.css'
   if (responseJson.code !== 0)
     window.location.href = '/password'
 }
-checkCurrentAuth()*/
+checkCurrentAuth()
 </script>
