--- a/src/pages/password.astro
+++ b/src/pages/password.astro
@@ -6,8 +6,8 @@
  <Layout title="Password Protection">
   <main class="h-screen col-fcc">
   <div class="text-center mt-8">
-  <p>请联系我获取密码：</p>
-  <p>邮箱：<a href="mailto:ziyiwxyz@gmail.com">ziyiwxyz@gmail.com</a></p>
+  <p>密码是1</p>
+  <p>我的邮箱：<a href="mailto:ziyiwxyz@gmail.com">ziyiwxyz@gmail.com</a></p>
 </div>
   <div id="input_container" class="flex mt-4">
   <input id="password_input" type="password" class="gpt-password-input" />
