--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,18 +5,18 @@
       b-slate-link
       href="https://ddiu.io" target="_blank"
     >
-      Diu
+    Diu
     </a>
-    <span px-1>|Fork</span>
+    <span px-1></span>
     <a
       b-slate-link
 href="https://github.com/ddiu8081/chatgpt-demo" target="_blank"
     >
-     address
+    | Github仓库
     </a>
     |<a href= "mailto:ziyiwxyz@gmail.com"
     >
-     Contact me
+     联系站长
      </a>
   </p>
 </footer>
